add background animation

--- a/index.html
+++ b/index.html
@@ -10,9 +10,162 @@
     <link rel="stylesheet" href="button.css"></link>
     <link rel="stylesheet" href="title.css"></link>
     <link rel="stylesheet" href="foother.css"></link>
-    <link rel="stylesheet" href="modules/Jaxit/jaxit.css" />   
+    <link rel="stylesheet" href="modules\background\colordrops\dist\style.css">
+    <link rel="stylesheet" href="modules/Jaxit/jaxit.css" /> 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/prefixfree/1.0.7/prefixfree.min.js"></script>
 </head>
 <body>
+<!-- partial:index.partial.html -->
+<div class='wrap'>
+    <div class='c'></div>
+    <div class='c'></div>
+    <div class='c'></div>
+    <div class='c'></div>
+    <div class='c'></div>
+    <div class='c'></div>
+    <div class='c'></div>
+    <div class='c'></div>
+    <div class='c'></div>
+    <div class='c'></div>
+    <div class='c'></div>
+    <div class='c'></div>
+    <div class='c'></div>
+    <div class='c'></div>
+    <div class='c'></div>
+    <div class='c'></div>
+    <div class='c'></div>
+    <div class='c'></div>
+    <div class='c'></div>
+    <div class='c'></div>
+    <div class='c'></div>
+    <div class='c'></div>
+    <div class='c'></div>
+    <div class='c'></div>
+    <div class='c'></div>
+    <div class='c'></div>
+    <div class='c'></div>
+    <div class='c'></div>
+    <div class='c'></div>
+    <div class='c'></div>
+    <div class='c'></div>
+    <div class='c'></div>
+    <div class='c'></div>
+    <div class='c'></div>
+    <div class='c'></div>
+    <div class='c'></div>
+    <div class='c'></div>
+    <div class='c'></div>
+    <div class='c'></div>
+    <div class='c'></div>
+    <div class='c'></div>
+    <div class='c'></div>
+    <div class='c'></div>
+    <div class='c'></div>
+    <div class='c'></div>
+    <div class='c'></div>
+    <div class='c'></div>
+    <div class='c'></div>
+    <div class='c'></div>
+    <div class='c'></div>
+    <div class='c'></div>
+    <div class='c'></div>
+    <div class='c'></div>
+    <div class='c'></div>
+    <div class='c'></div>
+    <div class='c'></div>
+    <div class='c'></div>
+    <div class='c'></div>
+    <div class='c'></div>
+    <div class='c'></div>
+    <div class='c'></div>
+    <div class='c'></div>
+    <div class='c'></div>
+    <div class='c'></div>
+    <div class='c'></div>
+    <div class='c'></div>
+    <div class='c'></div>
+    <div class='c'></div>
+    <div class='c'></div>
+    <div class='c'></div>
+    <div class='c'></div>
+    <div class='c'></div>
+    <div class='c'></div>
+    <div class='c'></div>
+    <div class='c'></div>
+    <div class='c'></div>
+    <div class='c'></div>
+    <div class='c'></div>
+    <div class='c'></div>
+    <div class='c'></div>
+    <div class='c'></div>
+    <div class='c'></div>
+    <div class='c'></div>
+    <div class='c'></div>
+    <div class='c'></div>
+    <div class='c'></div>
+    <div class='c'></div>
+    <div class='c'></div>
+    <div class='c'></div>
+    <div class='c'></div>
+    <div class='c'></div>
+    <div class='c'></div>
+    <div class='c'></div>
+    <div class='c'></div>
+    <div class='c'></div>
+    <div class='c'></div>
+    <div class='c'></div>
+    <div class='c'></div>
+    <div class='c'></div>
+    <div class='c'></div>
+    <div class='c'></div>
+    <div class='c'></div>
+    <div class='c'></div>
+    <div class='c'></div>
+    <div class='c'></div>
+    <div class='c'></div>
+    <div class='c'></div>
+    <div class='c'></div>
+    <div class='c'></div>
+    <div class='c'></div>
+    <div class='c'></div>
+    <div class='c'></div>
+    <div class='c'></div>
+    <div class='c'></div>
+    <div class='c'></div>
+    <div class='c'></div>
+    <div class='c'></div>
+    <div class='c'></div>
+    <div class='c'></div>
+    <div class='c'></div>
+    <div class='c'></div>
+    <div class='c'></div>
+    <div class='c'></div>
+    <div class='c'></div>
+    <div class='c'></div>
+    <div class='c'></div>
+    <div class='c'></div>
+    <div class='c'></div>
+    <div class='c'></div>
+    <div class='c'></div>
+    <div class='c'></div>
+    <div class='c'></div>
+    <div class='c'></div>
+    <div class='c'></div>
+    <div class='c'></div>
+    <div class='c'></div>
+    <div class='c'></div>
+    <div class='c'></div>
+    <div class='c'></div>
+    <div class='c'></div>
+    <div class='c'></div>
+    <div class='c'></div>
+    <div class='c'></div>
+    <div class='c'></div>
+  </div>
+  <!-- partial -->
+<script src='//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
     <div class="grid-wrapper item-main">
         <div class="grid-item item-menu">
             <button class="btn">
@@ -54,7 +207,7 @@
                     
                   });
                 </script>            </div>
-            <div class="grid-item jaxit-console"> 
+            <div class="grid-item item-in-right-down"> 
             <script type="module" src="modules/Jaxit/script.js"></script>
             </div>
         </div>
